# shippaw

./: .coverage  .env  .gitignore  .notenv  AmDesp.ps1  AmDesp.py  AmDesp.spec  AmDespMain.py  AmDespMulti.ps1  AmDespPowershell.ps1  AmDespPowershellAmherstAdmin.ps1  AmDespSingle.ps1  AmDesp_main.py  AmDesp_main.spec  AmDesp_setup_script.iss  AmShip.json  CheckInCmc.ps1  Main.py  README.md  class_play.py  class_process.py  config.py  config.toml  despatch_functions.py  get_Active_process.py  j_data_file.json  launcher.py  main.py  notes  notes.txt  play.py  playground.py  ps1 from vbs.ps1  purge.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.cfg  setup.py  (+3 more)
AmDesp/: config.py  gui.py  gui_layouts.py  one_dbase.py  shipment.py  shipper.py
AmDesp.egg-info/: PKG-INFO  SOURCES.txt
AmDesp_python/: AmDespShipper.py
amdesp/: address_gui.py  address_window.py  config.py  depreciate.py  enums.py  exceptions.py  from_xml.py  gui.py  gui_layouts.py  gui_params.py  initial_config.py  main_gui.py  shipment.py  shipment_prepper.py  shipper.py  shipper_next.py  tracking_gui.py
amdesp_shipper/: address_gui.py  config.py  enums.py  from_xml.py  main.py  main_gui.py  shipment.py  shipper.py  tracking_gui.py
backup/: AmDespBatch.ps1  AmDespClassesBak.py  AmDespClassesOops.py  AmDespFuncs.py  AmDespPowershellAmherstAdmin.ps1  AmDespPurge.py  amherst-hire-pss-purge  arno_export_item_detail.vbs  autoKlart.py  config_bak  despatch_functions.py  email_sender.py  exportCurrentDetailForm.txt  exportCurrentDetailForm.vbs  hire_amherst.VBS  log_amherst.VBS  (+4 more)
(+309 files in other folders)
